--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,4 +18,20 @@
 
 * {
     font-family: 'Poppins, sans-serif';
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#container {
+    height: 100vh;
+    width: 100%;
+    background: var(--color-gradient);
+    display: flex; /*posicionar o formulário no centro da tela*/
+    align-items: center;
+    justify-content: center;
+}
+
+#social_media img {
+    width: 35px;
 }
