--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@
     gap: 30px; /*mesmo espaçamento entre o login, ícones, informações e o botão*/
     box-shadow: 5px 5px 8px rgba(0, 0, 0,0.336);
     height: fit-content;
+    animation: dark-to-light 0.3s ease-in-out;
 }
 
 #form_header {
@@ -147,4 +148,35 @@
 
 #login_button:hover {
     transform: scale(1.05); /*aumenta o tamanho*/
+}
+
+.dark#login_form {
+    color: var(--color-light-50);
+    background-color: var(--color-dark-100);
+    animation: light-to-dark 0.3s ease-in-out;
+}
+
+.dark#login_form .input-field input,
+.dark#login_form .input-field i {
+    color: var(--color-dark-50);
+}
+
+@keyframes dark-to-light {
+    0% {
+        background-color: var(--color-dark-100);
+    }
+
+    100% {
+        background-color: var(--color-dark-50);
+    }
+}
+
+@keyframes light-to-dark {
+    0% {
+        background-color: var(--color-dark-50);
+    }
+
+    100% {
+        background-color: var(--color-dark-100);
+    }
 }
